Static BVH shading problem #41147

Closed
opened 2014-07-22 20:25:45 +02:00 by Daniel Salazar · 7 comments
Member

System Information

openSUSE 12.3 64bits
NVIDIA 480GTX SC
AMD FX-8350

Blender Version
Broken: 65d135a
Worked: 2.71 official release

Short description of error

Some models look black when using static BVH in the viewport and of course F12 always uses static

Exact steps for others to reproduce the error

Open Black.blend
Press Shift + Z on the viewport for anaming rendering mode. All should look fine.
Change viewport BVH to Static. Immediately some models turn dark

**System Information** openSUSE 12.3 64bits NVIDIA 480GTX SC AMD FX-8350 **Blender Version** Broken: 65d135a Worked: 2.71 official release **Short description of error** Some models look black when using static BVH in the viewport and of course F12 always uses static **Exact steps for others to reproduce the error** Open [Black.blend](https://archive.blender.org/developer/F99119/Black.blend) Press Shift + Z on the viewport for anaming rendering mode. All should look fine. Change viewport BVH to Static. Immediately some models turn dark
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo
Sergey Sharybin self-assigned this 2014-07-22 22:14:10 +02:00

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

I ran a bisect, which leads to 49df707496. Maybe the "do_transform" check and the matrix transformation which was in pack_normals() is the issue, as that is now missing? I am not sure how to check this on runtime though, and it would slow down the render most likely...

I ran a bisect, which leads to 49df707496e5. Maybe the "do_transform" check and the matrix transformation which was in pack_normals() is the issue, as that is now missing? I am not sure how to check this on runtime though, and it would slow down the render most likely...

This issue was referenced by 9fcaac5009

This issue was referenced by 9fcaac5009b567edc59c4831b6a0580211d1d290

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9fcaac5009.

Closed by commit 9fcaac5009.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41147
No description provided.