intern/cycles/kernel/kernel_shader.h
@@ -86,7 +86,7 @@ ccl_device void shader_setup_from_ray(KernelGlobals *kg, ShaderData *sd,
 #endif
 	if(sd->type & PRIMITIVE_TRIANGLE) {
 		/* static triangle */
-		float3 Ng = triangle_normal(kg, sd->prim);
+		float3 Ng = triangle_normal(kg, sd);
 		sd->shader =  __float_as_int(kernel_tex_fetch(__tri_shader, sd->prim));
 
 		/* vectors */
@@ -165,7 +165,7 @@ ccl_device_inline void shader_setup_from_subsurface(KernelGlobals *kg, ShaderDat
 
 	/* fetch triangle data */
 	if(sd->type == PRIMITIVE_TRIANGLE) {
-		float3 Ng = triangle_normal(kg, sd->prim);
+		float3 Ng = triangle_normal(kg, sd);
 		sd->shader =  __float_as_int(kernel_tex_fetch(__tri_shader, sd->prim));
 
 		/* static triangle */
